cli/tests/data/VisualStudioProjects/CompilationError/Makefiles/Bakefile/CompilationError.bkl
toolsets = vs2015 vs2013;

vs2015.solutionfile = ../VC14/CompilationError.sln;
vs2013.solutionfile = ../VC12/CompilationError.sln;

program CompilationError
{
    sources
    {
        ../../Source/main.cpp
    }
}
